# statistics-service

./: .env-example  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  task.md
app/: main.py
app/api/: deps.py  router.py
app/api/dependencies/: statistics.py  task.py
app/api/routes/: statistics.py
app/api/services/: parser.py
app/core/: settings.py
app/core/di/: providers.py  setup.py  stubs.py
app/db/: alembic.ini  base.py
app/db/dao/: __init__.py  base.py  statistics.py  task.py
app/db/migrations/: env.py
app/db/migrations/versions/: c2c2030766c9_initial.py
app/db/models/: __init__.py  statistic.py  statistics.py  task.py
app/schemas/: statistics.py  task.py
app/services/: __init__.py  parser.py  scheduler.py  statistics.py  task.py
app/worker/: client_provider.py  server.py  services.py
app/worker/grpc/: scheduler.proto  scheduler_pb2.py  scheduler_pb2.pyi  scheduler_pb2_grpc.py
app/worker/services/: logger.py  parser.py  scheduler.py
docker/: .env.example  Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 9a0f8ab2eeb7_init.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_services/: test_scheduler.py  test_statistics.py  test_task.py
