[tool.poetry]
name = "avito-stats-api"
version = "0.1.0"
description = "Service for displaying statistics for a specific search query on Avito"
authors = ["neekrasov <neekrasov@gmail.com>"]
readme = "README.md"
packages = [{include = "avito_stats_api"}]

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
APScheduler = "^3.9.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "app.main:app"