[tool.poetry]
name = "stats-service_api"
version = "0.1.0"
description = "Service for displaying statistics for a specific search query"
authors = ["neekrasov <neekrasov@gmail.com>"]
readme = "README.md"
packages = [{include = "avito_stats_api"}]

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
APScheduler = "^3.9.1"
uvicorn = "^0.18.3"
aiohttp = "^3.8.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pytest-mock = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "22.8.0"
httpx = "^0.23.0"
asgi-lifespan = "^1.0.1"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "app.main:app"