[tool.poetry]
name = "stats-service_api"
version = "0.1.0"
description = "Service for displaying statistics for a specific search query"
authors = ["neekrasov <neekrasov@gmail.com>"]
readme = "README.md"
packages = [{include = "avito_stats_api"}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
uvicorn = "^0.18.3"
aiohttp = "^3.8.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
psycopg2 = "^2.9.5"
grpcio = "^1.51.1"
grpcio-tools = "^1.51.1"
apscheduler = "^3.9.1.post1"
gunicorn = "^20.1.0"
orjson = "^3.8.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.1.3"
black = "22.8.0"
httpx = "^0.23.0"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^2.5.0"
pytest-mock = "^3.9.0"
mypy = "^0.991"
bandit = "^1.7.4"
vulture = "^2.6"
flake8-print = "^5.0.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"